--- a/RetailredStorefront/plugin.xml
+++ b/RetailredStorefront/plugin.xml
@@ -4,12 +4,23 @@
     <label lang="de">retail.red for Shopware 5</label>
     <label lang="en">retail.red for Shopware 5</label>
 
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <copyright>(c) by Shopgate GmbH</copyright>
     <license>MIT</license>
     <link>https://retail.red</link>
     <author>Shopgate GmbH</author>
     <compatibility minVersion="5.3.0"/>
+
+    <changelog version="1.0.2">
+        <changes lang="de">
+            - new product.options format
+            - product.identifiers.ean
+        </changes>
+        <changes lang="en">
+            - new product.options format
+            - product.identifiers.ean
+        </changes>
+    </changelog>
 
     <changelog version="1.0.1">
         <changes lang="de">Bugfix</changes>
