--- a/RetailredStorefront/plugin.xml
+++ b/RetailredStorefront/plugin.xml
@@ -4,7 +4,7 @@
     <label lang="de">retail.red for Shopware 5</label>
     <label lang="en">retail.red for Shopware 5</label>
 
-    <version>1.1.0-beta.1</version>
+    <version>1.1.0</version>
     <copyright>(c) by Shopgate GmbH</copyright>
     <license>MIT</license>
     <link>https://retail.red</link>
