--- a/SgateClickAndReserve/plugin.xml
+++ b/SgateClickAndReserve/plugin.xml
@@ -6,10 +6,13 @@
 
     <version>1.2.2</version>
     <copyright>(c) by Shopgate GmbH</copyright>
-    <license>MIT</license>
+    <license>proprietary</license>
     <link>https://retail.red</link>
     <author>Shopgate GmbH</author>
-    <compatibility minVersion="5.3.0"/>
+    <compatibility minVersion="5.6.0"/>
+
+    <description><![CDATA[With click & reserve, customers can reserve goods online and pick them up locally. This has been proven to reduce return and abandonment rates and bring your customers into your stores!]]></description>
+    <description lang="de"><![CDATA[Mit Click & Reserve können Kund*innen Waren online reservieren und lokal abholen. Das reduziert nachweislich die Retouren- und Abbruchraten und bringt Ihre Kundschaft in Ihre Filialen!]]></description>
 
     <changelog version="1.2.2">
         <changes lang="de">
