--- a/SgateClickAndReserve/plugin.xml
+++ b/SgateClickAndReserve/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="https://raw.githubusercontent.com/shopware/shopware/5.3/engine/Shopware/Components/Plugin/schema/plugin.xsd">
-    <label lang="de">retail.red for Shopware 5</label>
-    <label lang="en">retail.red for Shopware 5</label>
+    <label lang="de">Shopgate - Click & Reserve</label>
+    <label lang="en">Shopgate - Click & Reserve</label>
 
     <version>1.2.2</version>
     <copyright>(c) by Shopgate GmbH</copyright>
